# ChangeLog for sys-kernel/gentoo-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.305 2006/07/06 23:33:57 dsd Exp $

*gentoo-sources-2.6.16-r12 (06 Jul 2006)

  06 Jul 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.16-r12.ebuild:
  Update to Linux 2.6.16.24 for coredump privilege escalation security fix

  06 Jul 2006; Markus Rothe <corsair@gentoo.org>
  gentoo-sources-2.6.16-r11.ebuild:
  Stable on ppc64

  05 Jul 2006; Daniel Drake <dsd@gentoo.org>
  gentoo-sources-2.6.16-r11.ebuild:
  Stable on amd64 and x86

  04 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.16-r11.ebuild, gentoo-sources-2.6.17-r1.ebuild:
  Stable on sparc

*gentoo-sources-2.4.32-r6 (02 Jul 2006)

  02 Jul 2006; <plasmaroo@gentoo.org> -gentoo-sources-2.4.31-r1.ebuild,
  -gentoo-sources-2.4.32-r4.ebuild, gentoo-sources-2.4.32-r5.ebuild,
  +gentoo-sources-2.4.32-r6.ebuild:
  Add security patches for #138617; remove stale versions.

*gentoo-sources-2.6.17-r1 (02 Jul 2006)

  02 Jul 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.17-r1.ebuild:
  Update to Linux 2.6.17.3. Fix link detection on VIA Velocity ethernet. Fix
  sound on Lenovo 3000 laptops. Add support for Broadcom BCM4319 WLAN, nvidia
  MCP61/65 LAN/SATA/IDE, VIA VT8251 SATA, new JMicron SATA, ASIX 88178
  USB-LAN.

  01 Jul 2006; <dams@gentoo.org> gentoo-sources-2.6.17.ebuild:
  added ~ppc

*gentoo-sources-2.6.16-r11 (01 Jul 2006)

  01 Jul 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.16-r11.ebuild:
  Update to Linux 2.6.16.23.

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.16-r10.ebuild, gentoo-sources-2.6.17.ebuild:
  Stable on sparc, run for the hills

  20 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.17.ebuild:
  Give it some ~sparc love
