@@ -45,6 +45,8 @@ DIST genpatches-2.6.17-1.base.tar.bz2 3337 RMD160 f9b5621fed8fcfee7da697d8909784
 DIST genpatches-2.6.17-1.extras.tar.bz2 138704 RMD160 14b17e02b7893e6b023bee9e1b40f4bc85a30f05 SHA1 e671dbc29239116e627aea3d87ff7aefd8b5ca00 SHA256 fa10ec7d3d74c8bf57fb3bd01c33f83dcca3c1e4cd4601937cc2ef904cce1dfe
 DIST genpatches-2.6.17-2.base.tar.bz2 12447 RMD160 642b311a32f48f00979549d1471aaeac1ca41e1a SHA1 3372c1c8f5a033376fd2d6a0eb5aaefbd62429e9 SHA256 ed298717addf89b7949e1f55d7365e1be3d51494cf302efbbaeb16aecabf6578
 DIST genpatches-2.6.17-2.extras.tar.bz2 145642 RMD160 cdb333c4f0b95df9f9bce58ccc7f096c7c87338b SHA1 902feb4b9820bc5ef04c8e77accfda5ac0bb4953 SHA256 9839f01cde6c7a19b4f2e512720d34476af6d50d1dcabf50eeb89f6d800329e7
+DIST genpatches-2.6.17-3.base.tar.bz2 12926 RMD160 0f544a97835d33596fba55e49b087eaf02198adf SHA1 07a1f6eff84bad731ce483f98b8ac22684417798 SHA256 6309f3da37f991bf157cbdd903eb7a72135873824d6590b582cef1114640d928
+DIST genpatches-2.6.17-3.extras.tar.bz2 145642 RMD160 cdb333c4f0b95df9f9bce58ccc7f096c7c87338b SHA1 902feb4b9820bc5ef04c8e77accfda5ac0bb4953 SHA256 9839f01cde6c7a19b4f2e512720d34476af6d50d1dcabf50eeb89f6d800329e7
 DIST gentoo-sources-2.4.32-r5.tar.bz2 927187 RMD160 4e3b5be9f6db9dc610a1fe55a484edc3f4e32c40 SHA1 48c4d64fa7f356c5a32745fbfc9d4555ec850f66 SHA256 6937ff3e1be270c758ce3087b60a26a43031d8d7f03a6d7de9416b35f0e1892d
 DIST gentoo-sources-2.4.32-r6.tar.bz2 927324 RMD160 871bcf502bb969fcc5740ffd159e6a66943fa751 SHA1 521ccdeb50a9109bd7029e10bfadbad38658d25c SHA256 4df49c1edf980ee827888cd25bdc0e1203751718d46fc53de3b5c6d03bd04c41
 DIST linux-2.4.32.tar.bz2 31132159 RMD160 63ab1a0b18e690170f60de9da7392416311dc609 SHA1 0a99d7ab1d2799168d11689b4a2410b045592cf4 SHA256 7dace89c3f0850c3d5c32c38c20b600259c314e8cbec29fe3ee59c2fbbee1759
@@ -132,14 +134,18 @@ EBUILD gentoo-sources-2.6.17-r1.ebuild 1226 RMD160 b24035fe3b6825422abe96caa6db5
 MD5 4789541426ba0c2c4215d55605a88214 gentoo-sources-2.6.17-r1.ebuild 1226
 RMD160 b24035fe3b6825422abe96caa6db554244537796 gentoo-sources-2.6.17-r1.ebuild 1226
 SHA256 bbe1f3b021556a2095a79e764b04209f98efee6b94faf243c6ea7c8609ebefd8 gentoo-sources-2.6.17-r1.ebuild 1226
+EBUILD gentoo-sources-2.6.17-r2.ebuild 1222 RMD160 4711800a61f3f71a671406f9f3a1f78816e5db2e SHA1 b928d387a5ad86d33ae59cbda626aa81d1fc96e7 SHA256 ced971ac15ac97a2ea5609cd70adfac32f48616bb3558cb93884388c518836c9
+MD5 5532448bff56a91d082c13c7371b3096 gentoo-sources-2.6.17-r2.ebuild 1222
+RMD160 4711800a61f3f71a671406f9f3a1f78816e5db2e gentoo-sources-2.6.17-r2.ebuild 1222
+SHA256 ced971ac15ac97a2ea5609cd70adfac32f48616bb3558cb93884388c518836c9 gentoo-sources-2.6.17-r2.ebuild 1222
 EBUILD gentoo-sources-2.6.17.ebuild 1219 RMD160 1599f83276ece40ce2e3be4355c5e17e9686c9b7 SHA1 6dfe62f0c6d2fc5c48b5b2caa8025bc26ca8e9c3 SHA256 51d651d432c40d1b657de027281e2bfdca61ba6604a977a59f9184708b6350b6
 MD5 db767bb01c8362a76ce276713b7fb088 gentoo-sources-2.6.17.ebuild 1219
 RMD160 1599f83276ece40ce2e3be4355c5e17e9686c9b7 gentoo-sources-2.6.17.ebuild 1219
 SHA256 51d651d432c40d1b657de027281e2bfdca61ba6604a977a59f9184708b6350b6 gentoo-sources-2.6.17.ebuild 1219
-MISC ChangeLog 67259 RMD160 08f34bee45e35e893c643aed80c574aa20f9de7d SHA1 846addfa27bf2d09ec32d35e7ce49cc70063b447 SHA256 637cdd71d6b5a6ca831c92d53766e69e2493bbfb5074bec9b972f2939acb37a1
-MD5 20a4c32722ebcdef699768be94a54803 ChangeLog 67259
-RMD160 08f34bee45e35e893c643aed80c574aa20f9de7d ChangeLog 67259
-SHA256 637cdd71d6b5a6ca831c92d53766e69e2493bbfb5074bec9b972f2939acb37a1 ChangeLog 67259
+MISC ChangeLog 67456 RMD160 42ab59c645cbdeb7de22edc0f30f98d8b1c0ccbc SHA1 5a8715629797cc86d77750c5cd48f3cfebd52383 SHA256 448774689609cb0435177e0399830915bd01e5f3151a6cf76c28a950e43ce4d5
+MD5 7c55bc8e84bef2fead3310a01c8c875a ChangeLog 67456
+RMD160 42ab59c645cbdeb7de22edc0f30f98d8b1c0ccbc ChangeLog 67456
+SHA256 448774689609cb0435177e0399830915bd01e5f3151a6cf76c28a950e43ce4d5 ChangeLog 67456
 MISC metadata.xml 283 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 SHA1 6f848a776c16d39a04d9a363fd14bf5ca15e7d42 SHA256 16eda12305d2f4dba1a5650d79f49204d23c82de0d9883424dc74b3d372e45e2
 MD5 410c3afeb274354a7ce68257edc18012 metadata.xml 283
 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 metadata.xml 283
@@ -207,10 +213,13 @@ SHA256 482238abaafe1482e35b0de5d6fbde3cc5f3e307aa885f823693b5bf01edcc09 files/di
 MD5 28df8b2d0f362462df5cfdb3cef70e84 files/digest-gentoo-sources-2.6.17-r1 804
 RMD160 a676e22e6d2994ac5953416774a7f2b697027952 files/digest-gentoo-sources-2.6.17-r1 804
 SHA256 dd5f55a6c7a3835f4fe36d5c5a3a799619b345380a55225bc441b0cadbd22a4d files/digest-gentoo-sources-2.6.17-r1 804
+MD5 5eea10010b819df862d23bb3a73c3b71 files/digest-gentoo-sources-2.6.17-r2 804
+RMD160 b301664d5318b9b80406d22c444357d71387affe files/digest-gentoo-sources-2.6.17-r2 804
+SHA256 c87ab0e0e69e3ebad3e42aa078057fd6a57a6bc6385e99cfd83e1e99c12c5a7f files/digest-gentoo-sources-2.6.17-r2 804
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFErZ8hTOXg++0VvJQRAoJ3AJ9faIRMpIEcf+WKMzKvgofLlrYBBQCgkymn
-E0vonH14taphygEVNKqQDzE=
-=sekx
+iD8DBQFErjadTOXg++0VvJQRAgFrAKDcFUjRTitDJU+TgmH4lzWTtJN0ogCfXSrL
+x58mi8xtqtREuUxk3VUz9ew=
+=OwPV
 -----END PGP SIGNATURE-----
