@@ -1,0 +1,9 @@
+MD5 4d285682c97d18454a0387cc50b2ab8f genpatches-2.6.17-3.base.tar.bz2 12926
+RMD160 0f544a97835d33596fba55e49b087eaf02198adf genpatches-2.6.17-3.base.tar.bz2 12926
+SHA256 6309f3da37f991bf157cbdd903eb7a72135873824d6590b582cef1114640d928 genpatches-2.6.17-3.base.tar.bz2 12926
+MD5 d82fc527936aff160ba598e170ffe695 genpatches-2.6.17-3.extras.tar.bz2 145642
+RMD160 cdb333c4f0b95df9f9bce58ccc7f096c7c87338b genpatches-2.6.17-3.extras.tar.bz2 145642
+SHA256 9839f01cde6c7a19b4f2e512720d34476af6d50d1dcabf50eeb89f6d800329e7 genpatches-2.6.17-3.extras.tar.bz2 145642
+MD5 37ddefe96625502161f075b9d907f21e linux-2.6.17.tar.bz2 41272919
+RMD160 26aad30c9a6610665c6c7d62401d79bf56a6a699 linux-2.6.17.tar.bz2 41272919
+SHA256 ab0f647d52f124958439517df9e1ae0efda90cdb851f59f522fa1749f1d87d58 linux-2.6.17.tar.bz2 41272919
