@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.305 2006/07/06 23:33:57 dsd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.306 2006/07/07 10:20:12 dsd Exp $
+
+*gentoo-sources-2.6.17-r2 (07 Jul 2006)
+
+  07 Jul 2006; Daniel Drake <dsd@gentoo.org>
+  +gentoo-sources-2.6.17-r2.ebuild:
+  Update to Linux 2.6.17.4 for coredump privilege escalation security fix
 
 *gentoo-sources-2.6.16-r12 (06 Jul 2006)
 
